--- a/style.scss
+++ b/style.scss
@@ -12,15 +12,19 @@ body {
 }
 
 #timer {
-    position: relative;
-    left: 8px;
-    bottom: 5px;
-    margin: 180px;
     padding: 0 16px 10px 30px;
     border: 10px solid #741147;
     border-radius: 24px;
     background-color: rgba(52, 4, 30, .5);
     text-shadow: white 1px 0 10px;
+}
+
+#start-light {
+    border-radius: 24px;
+    position: relative;
+    left: 8px;
+    bottom: 5px;
+    margin: 180px;
 }
 
 #hour, #minute, #second {
@@ -90,29 +94,30 @@ body {
 
 // ========================================================== //
 
-input {
-    font-family: 'Inconsolata', monospace;
+#timer-start {
+    display: block;
     position: absolute;
-    top: 50px;
-    left: 50px;
-    padding: 20px 40px;
-    margin: 0 10px;
-    background-color: #000000;
-    color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     border: 0;
-    border-radius: 24px;
-    font-size: 2rem;
-    transition: 0.1s;
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 #timer-stop {
-    left: 250px;
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
 }
 
-input:hover {
-    background-color: #4d0c2f;
-}
-
-input:active {
-    background-color: #871250;
+input:focus {
+    outline: 0;
 }
